@@ -34,6 +34,7 @@
 ../../CCore/src/crypton/AES.cpp
 ../../CCore/src/crypton/BlockCipher.cpp
 ../../CCore/src/crypton/DHExp.cpp
+../../CCore/src/crypton/Forget.cpp
 ../../CCore/src/crypton/HashFunction.cpp
 ../../CCore/src/crypton/Rot.cpp
 ../../CCore/src/crypton/SHA.cpp
