@@ -108,6 +108,7 @@ obj/FastMutex.o \
 obj/Fifo.o \
 obj/FileName.o \
 obj/Flash.o \
+obj/Forget.o \
 obj/FrameBuf.o \
 obj/FuncTask.o \
 obj/Function.o \
@@ -421,6 +422,7 @@ obj/FastMutex.s \
 obj/Fifo.s \
 obj/FileName.s \
 obj/Flash.s \
+obj/Forget.s \
 obj/FrameBuf.s \
 obj/FuncTask.s \
 obj/Function.s \
@@ -734,6 +736,7 @@ obj/FastMutex.dep \
 obj/Fifo.dep \
 obj/FileName.dep \
 obj/Flash.dep \
+obj/Forget.dep \
 obj/FrameBuf.dep \
 obj/FuncTask.dep \
 obj/Function.dep \
@@ -1277,6 +1280,9 @@ obj/FileName.o : ../../CCore/src/FileName.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 obj/Flash.o : ../../Target/IXDP465/CCore/src/Flash.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+obj/Forget.o : ../../CCore/src/crypton/Forget.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 obj/FrameBuf.o : ../../CCore/src/video/FrameBuf.cpp
@@ -2211,6 +2217,9 @@ obj/FileName.s : ../../CCore/src/FileName.cpp
 obj/Flash.s : ../../Target/IXDP465/CCore/src/Flash.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+obj/Forget.s : ../../CCore/src/crypton/Forget.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 obj/FrameBuf.s : ../../CCore/src/video/FrameBuf.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -3142,6 +3151,9 @@ obj/FileName.dep : ../../CCore/src/FileName.cpp
 
 obj/Flash.dep : ../../Target/IXDP465/CCore/src/Flash.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Flash.o $< -MF $@
+
+obj/Forget.dep : ../../CCore/src/crypton/Forget.cpp
+	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Forget.o $< -MF $@
 
 obj/FrameBuf.dep : ../../CCore/src/video/FrameBuf.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/FrameBuf.o $< -MF $@
