@@ -100,6 +100,7 @@ obj/FastMul.o \
 obj/FastMutex.o \
 obj/Fifo.o \
 obj/FileName.o \
+obj/Forget.o \
 obj/FrameBuf.o \
 obj/FuncTask.o \
 obj/Function.o \
@@ -400,6 +401,7 @@ obj/FastMul.s \
 obj/FastMutex.s \
 obj/Fifo.s \
 obj/FileName.s \
+obj/Forget.s \
 obj/FrameBuf.s \
 obj/FuncTask.s \
 obj/Function.s \
@@ -700,6 +702,7 @@ obj/FastMul.dep \
 obj/FastMutex.dep \
 obj/Fifo.dep \
 obj/FileName.dep \
+obj/Forget.dep \
 obj/FrameBuf.dep \
 obj/FuncTask.dep \
 obj/Function.dep \
@@ -1205,6 +1208,9 @@ obj/Fifo.o : ../../CCore/src/Fifo.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 obj/FileName.o : ../../CCore/src/FileName.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+obj/Forget.o : ../../CCore/src/crypton/Forget.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 obj/FrameBuf.o : ../../CCore/src/video/FrameBuf.cpp
@@ -2100,6 +2106,9 @@ obj/Fifo.s : ../../CCore/src/Fifo.cpp
 obj/FileName.s : ../../CCore/src/FileName.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+obj/Forget.s : ../../CCore/src/crypton/Forget.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 obj/FrameBuf.s : ../../CCore/src/video/FrameBuf.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -2992,6 +3001,9 @@ obj/Fifo.dep : ../../CCore/src/Fifo.cpp
 
 obj/FileName.dep : ../../CCore/src/FileName.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/FileName.o $< -MF $@
+
+obj/Forget.dep : ../../CCore/src/crypton/Forget.cpp
+	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Forget.o $< -MF $@
 
 obj/FrameBuf.dep : ../../CCore/src/video/FrameBuf.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/FrameBuf.o $< -MF $@
