@@ -93,6 +93,7 @@ obj/Fifo.o \
 obj/FileName.o \
 obj/FileSystem.o \
 obj/FileToMem.o \
+obj/Forget.o \
 obj/FrameBuf.o \
 obj/FuncTask.o \
 obj/Function.o \
@@ -383,6 +384,7 @@ obj/Fifo.s \
 obj/FileName.s \
 obj/FileSystem.s \
 obj/FileToMem.s \
+obj/Forget.s \
 obj/FrameBuf.s \
 obj/FuncTask.s \
 obj/Function.s \
@@ -673,6 +675,7 @@ obj/Fifo.dep \
 obj/FileName.dep \
 obj/FileSystem.dep \
 obj/FileToMem.dep \
+obj/Forget.dep \
 obj/FrameBuf.dep \
 obj/FuncTask.dep \
 obj/Function.dep \
@@ -873,6 +876,7 @@ obj/IntegerFastAlgo.s.o \
 obj/IntelAES.s.o \
 obj/IntelCPUID.s.o \
 obj/IntelRandom.s.o \
+obj/PlatformBase.s.o \
 obj/Quick.s.o \
 obj/SysAtomic.s.o \
 obj/SysTime.s.o \
@@ -1161,6 +1165,9 @@ obj/FileSystem.o : ../../HCore/CCore/src/FileSystem.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 obj/FileToMem.o : ../../HCore/CCore/src/FileToMem.cpp
+	$(CC) $(CCOPT) $< -o $@
+
+obj/Forget.o : ../../CCore/src/crypton/Forget.cpp
 	$(CC) $(CCOPT) $< -o $@
 
 obj/FrameBuf.o : ../../CCore/src/video/FrameBuf.cpp
@@ -2026,6 +2033,9 @@ obj/FileSystem.s : ../../HCore/CCore/src/FileSystem.cpp
 obj/FileToMem.s : ../../HCore/CCore/src/FileToMem.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
+obj/Forget.s : ../../CCore/src/crypton/Forget.cpp
+	$(CC) -S $(CCOPT) $< -o $@
+
 obj/FrameBuf.s : ../../CCore/src/video/FrameBuf.cpp
 	$(CC) -S $(CCOPT) $< -o $@
 
@@ -2889,6 +2899,9 @@ obj/FileSystem.dep : ../../HCore/CCore/src/FileSystem.cpp
 obj/FileToMem.dep : ../../HCore/CCore/src/FileToMem.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/FileToMem.o $< -MF $@
 
+obj/Forget.dep : ../../CCore/src/crypton/Forget.cpp
+	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/Forget.o $< -MF $@
+
 obj/FrameBuf.dep : ../../CCore/src/video/FrameBuf.cpp
 	$(CC) $(CCOPT) -MM -MT $(OBJ_PATH)/FrameBuf.o $< -MF $@
 
@@ -3480,6 +3493,9 @@ obj/IntelCPUID.s.o : ../../Target/WIN32/CCore/src/crypton/IntelCPUID.s
 	$(AS) $(ASOPT) $< -o $@
 
 obj/IntelRandom.s.o : ../../Target/WIN32/CCore/src/crypton/IntelRandom.s
+	$(AS) $(ASOPT) $< -o $@
+
+obj/PlatformBase.s.o : ../../Target/WIN32/CCore/src/base/PlatformBase.s
 	$(AS) $(ASOPT) $< -o $@
 
 obj/Quick.s.o : ../../Target/WIN32/CCore/src/base/Quick.s
