@@ -279,10 +279,20 @@
    <li><a href="html/page_PTPBoot.html">PTP Boot</a></li>
    <li><a href="html/page_PTPEchoTest.html">PTP echo test</a></li>
    <li><a href="html/page_NetFork.html">NetFork</a></li>
+   <li>PSec</li>
   </ol>
  </li>
 
- <li>Math</li>
+ <li>Math
+  <ol>
+   <li>Integer</li>
+   <li>IntegerSlowAlgo</li>
+   <li>IntegerFastAlgo</li>
+   <li>IntegerOctetBuilder</li>
+   <li>SmallPrimes</li>
+   <li>NoPrimeTest</li>
+  </ol>
+ </li>
 
  <li><a href="html/page_Crypton.html">Crypton</a>
   <ol>
@@ -291,6 +301,8 @@
    <li><a href="html/page_HashFunction.html">HashFunction</li>
    <li><a href="html/page_SHA.html">SHA</a></li>
    <li><a href="html/page_Rot.html">Rot</a></li>
+   <li>Forget</li>
+   <li>DHExp</li>
   </ol>
  </li>
 
